--- a/PolarProblems/PolarProblems/PolarProblems.csproj
+++ b/PolarProblems/PolarProblems/PolarProblems.csproj
@@ -54,17 +54,17 @@
   <ItemGroup>
     <Reference Include="MySql.Data, Version=6.5.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Resources\DLLs\MySql.Data.dll</HintPath>
+      <HintPath>C:\Users\Makc\Desktop\students\Common\DLLs\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="PolarDB, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Resources\DLLs\PolarDB.dll</HintPath>
+      <HintPath>C:\Users\Makc\Desktop\students\Common\DLLs\PolarDB.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.SQLite, Version=1.0.93.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Resources\DLLs\System.Data.SQLite.dll</HintPath>
+      <HintPath>C:\Users\Makc\Desktop\students\Common\DLLs\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
