--- a/TableOfNames/TableOfNames.csproj
+++ b/TableOfNames/TableOfNames.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0B808D6C-C333-4CB5-82D4-174F359DFD3B}</ProjectGuid>
+    <ProjectGuid>{EAFA8707-78A5-460B-9D0C-7DC63722F8D8}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestPolarBtree</RootNamespace>
-    <AssemblyName>TestPolarBtree</AssemblyName>
+    <RootNamespace>TableOfNames</RootNamespace>
+    <AssemblyName>TableOfNames</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,8 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PolarDB, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="PolarDB">
       <HintPath>..\Common\DLLs\PolarDB.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -45,9 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BTree.cs" />
-    <Compile Include="MainTestBTree.cs" />
+    <Compile Include="BinaryTreeIndex.cs" />
+    <Compile Include="TestingTableOfNames.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestDataGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
