--- a/TableOfNames/TableOfNames.csproj
+++ b/TableOfNames/TableOfNames.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinaryTreeIndex.cs" />
+    <Compile Include="TableOfNames.cs" />
     <Compile Include="TestingTableOfNames.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDataGenerator.cs" />
