Добавлены тесты для различного количества записей в проект TableOfNamesSQL

--- a/TableOfNamesSQL/TableOfNamesSQL.csproj
+++ b/TableOfNamesSQL/TableOfNamesSQL.csproj
@@ -68,7 +68,7 @@
   <ItemGroup>
     <Compile Include="MySQL.cs" />
     <Compile Include="MSSQL.cs" />
-    <Compile Include="SQLDB.cs" />
+    <Compile Include="ISQLDB.cs" />
     <Compile Include="SQLite.cs" />
     <Compile Include="Testing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
