--- a/PolarBTreeIndex/PolarBTreeIndex/PolarBTreeIndex.csproj
+++ b/PolarBTreeIndex/PolarBTreeIndex/PolarBTreeIndex.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0B808D6C-C333-4CB5-82D4-174F359DFD3B}</ProjectGuid>
+    <ProjectGuid>{AC2EB759-D7EC-4A7B-A346-CF4530B6C9D3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestPolarBtree</RootNamespace>
-    <AssemblyName>TestPolarBtree</AssemblyName>
+    <RootNamespace>PolarBTreeIndex</RootNamespace>
+    <AssemblyName>PolarBTreeIndex</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,9 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PolarDB, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Common\DLLs\PolarDB.dll</HintPath>
+    <Reference Include="PolarDB">
+      <HintPath>..\..\Common\DLLs\PolarDB.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,9 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BTree.cs" />
-    <Compile Include="TestBTree.cs" />
+    <Compile Include="BTreeInd.cs" />
+    <Compile Include="NamesTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestingNamesTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
