--- a/ORMPolar/ORMPolar.csproj
+++ b/ORMPolar/ORMPolar.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Books.cs" />
     <Compile Include="DbContext.cs" />
     <Compile Include="DbSet.cs" />
+    <Compile Include="IndexAttribute.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestORM.cs" />
@@ -98,6 +99,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExtendedIndexBTree\ExtendedIndexBTree.csproj">
+      <Project>{ce9e0d70-259c-4a29-977c-64232da34c6f}</Project>
+      <Name>ExtendedIndexBTree</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
