--- a/TestPlatform/TestPlatform.csproj
+++ b/TestPlatform/TestPlatform.csproj
@@ -39,6 +39,8 @@
       <HintPath>..\Common\DLLs\PolarDB.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -53,14 +55,35 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="CreateDBTest.cs" />
+    <Compile Include="SpeedTests\IPerformanceTest.cs" />
+    <Compile Include="SpeedTests\TestTableOfNamesBTreePolar.cs" />
+    <Compile Include="SpeedTests\TestTableOfNamesBinTreePolar.cs" />
+    <Compile Include="SpeedTests\TestTableOfNamesSQL.cs" />
+    <Compile Include="SpeedTests\TestORMPolarDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestBtree.cs" />
+    <Compile Include="UnitTests\TestBtree.cs" />
+    <Compile Include="UnitTests\TestORM.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExtendedIndexBTree\ExtendedIndexBTree.csproj">
       <Project>{ce9e0d70-259c-4a29-977c-64232da34c6f}</Project>
       <Name>ExtendedIndexBTree</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ORMPolar\ORMPolar.csproj">
+      <Project>{da63279c-44cc-4d69-9b90-f653e8e33be6}</Project>
+      <Name>ORMPolar</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PolarBTreeIndex\PolarBTreeIndex\PolarBTreeIndex.csproj">
+      <Project>{ac2eb759-d7ec-4a7b-a346-cf4530b6c9d3}</Project>
+      <Name>PolarBTreeIndex</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TableOfNamesSQL\TableOfNamesSQL.csproj">
+      <Project>{eb8ae6a1-bcb5-4fd3-87bc-3b4b5f52904b}</Project>
+      <Name>TableOfNamesSQL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TableOfNames\TableOfNames.csproj">
+      <Project>{eafa8707-78a5-460b-9d0c-7dc63722f8d8}</Project>
+      <Name>TableOfNames</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
