Реализованы SpeedTests для ORMPolar, bugfix и оптимизация кода

--- a/PolarBTreeIndex/PolarBTreeIndex/PolarBTreeIndex.csproj
+++ b/PolarBTreeIndex/PolarBTreeIndex/PolarBTreeIndex.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="BTreeInd.cs" />
     <Compile Include="NamesTable.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
