--- a/TestPlatform/TestPlatform.csproj
+++ b/TestPlatform/TestPlatform.csproj
@@ -26,6 +26,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -35,6 +36,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
@@ -68,11 +70,20 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Iesi.Collections.4.0.1.4000\lib\net40\Iesi.Collections.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\NHibernate.4.0.4.4000\lib\net40\NHibernate.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="PolarDB">
       <HintPath>..\Common\DLLs\PolarDB.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Data" />
     <Reference Include="System.XML" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -89,7 +100,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BookLibrary.cs" />
     <Compile Include="LaunchingTest.cs" />
+    <Compile Include="SpeedTests\TestORMNHibernate.cs" />
     <Compile Include="SpeedTests\IPerformanceTest.cs" />
     <Compile Include="SpeedTests\TestORMEntityFramework.cs" />
     <Compile Include="SpeedTests\TestORMInRAM.cs" />
@@ -109,6 +122,10 @@
     <ProjectReference Include="..\ORMEntityFramework\ORMEntityFramework.csproj">
       <Project>{bc68de0c-9310-498f-84fc-528bb7e0a4ce}</Project>
       <Name>ORMEntityFramework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ORMNHibernate\ORMNHibernate.csproj">
+      <Project>{3847727b-fe04-4be3-b2ec-8443ada660b1}</Project>
+      <Name>ORMNHibernate</Name>
     </ProjectReference>
     <ProjectReference Include="..\ORMPolar\ORMPolar.csproj">
       <Project>{da63279c-44cc-4d69-9b90-f653e8e33be6}</Project>
@@ -131,6 +148,12 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mappings\ORMNHibernate.hbm.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
