--- a/ORMEntityFramework/App.config
+++ b/ORMEntityFramework/App.config
@@ -1,17 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <!--<add name="DBConnection" 
-         connectionString="data source=(localdb)\v11.0;Initial Catalog=BooksStore.mdf;Integrated Security=True;"
-         providerName="System.Data.SqlClient"/>!-->
-
-    <add name="DBConnection" 
-         connectionString="data source=(localdb)\ProjectsV12;AttachDbFilename=E:\My_Documents\Coding\_VSprojects\students\Databases\BookStoreEF.mdf;Integrated Security=True;Connect Timeout=30"
-         providerName="System.Data.SqlClient"/>
+    <add name="ORMEntityFramework.Properties.Settings.DbConnection"
+      connectionString="Data Source=(LocalDB)\ProjectsV12;Initial Catalog=BookStoreEF;Integrated Security=True;Pooling=False;Connect Timeout=3" />
+    <add name="ORMEntityFramework.Properties.Settings.DbConnection2"
+      connectionString="Data Source=MAKC-NB\SQLEXPRESS;Initial Catalog=BookStoreEF; User ID=sa;Password=123; Integrated Security=True;Pooling=False;Connect Timeout=3" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -23,4 +20,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
