--- a/ORMEntityFramework/App.config
+++ b/ORMEntityFramework/App.config
@@ -5,10 +5,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
+    <add name="DbConnection" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=NorthWind;Integrated Security=True;Connect Timeout=3;Encrypt=False;TrustServerCertificate=False" />
     <add name="ORMEntityFramework.Properties.Settings.DbConnection"
-      connectionString="Data Source=(LocalDB)\ProjectsV12;Initial Catalog=BookStoreEF;Integrated Security=True;Pooling=False;Connect Timeout=3" />
-    <add name="ORMEntityFramework.Properties.Settings.DbConnection2"
-      connectionString="Data Source=MAKC-NB\SQLEXPRESS;Initial Catalog=BookStoreEF; User ID=sa;Password=123; Integrated Security=True;Pooling=False;Connect Timeout=3" />
+      connectionString="Server=(localdb)\v11.0; Initial Catalog=NorthWind;Integrated Security=True;Connect Timeout=3" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -20,4 +19,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+  </startup>
+</configuration>
