--- a/TestPlatform/app.config
+++ b/TestPlatform/app.config
@@ -4,6 +4,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
+  <connectionStrings>
+    <add name="TestPlatform.Properties.Settings.DbConnection" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=BookStore;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
@@ -16,5 +19,9 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
+    <connectionStrings>
+      <add name="ORMEntityFramework.Properties.Settings.DbConnection"
+        connectionString="Server=(localdb)\v11.0; Initial Catalog=BookStore;Integrated Security=True;Connect Timeout=10" />
+    </connectionStrings>
   </entityFramework>
 </configuration>
